# pyvoro2

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEV_PLAN.md  NOTICE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  wheels.yml
benchmarks/: README.md  benchmark_sparse_separator.py
cpp/: bindings2d.cpp
docs/: index.md
docs/development/: api-inventory.md  api-lifecycle.md  architecture.md  development-workflow.md  documentation-conventions.md  index.md  release-checklist-v0.7.md
docs/guide/: choosing-api.md  concepts.md  glossary.md  migration-v0.7.md  notebooks.md  operations.md  planar.md  powerfit.md  topology.md  visualization.md
docs/notebooks/: 01_basic_compute.md  02_periodic_graph.md  03_locate_and_ghost.md  (+6 more)
examples/: README.md  __init__.py  chemvoro_workflow.py  paper_regressions.py  static_separator_cases.py
notebooks/: 01_basic_compute.ipynb  02_periodic_graph.ipynb  03_locate_and_ghost.ipynb  04_powerfit.ipynb  05_visualization.ipynb  06_powerfit_reports.ipynb  07_powerfit_infeasibility.ipynb  08_powerfit_active_path.ipynb  README.md
tests/: test_adjacency_output.py  test_api_input_validation.py  test_crosscheck_pyvoro.py  test_face_properties.py  test_face_shift_tie_break.py  test_fuzz_compute.py  test_include_empty.py  test_inverse_separator_names.py  test_inverse_separator_ownership.py  test_normalize_topology.py  test_normalize_vertices.py  test_notebook_tools.py  test_orthorhombic_face_shifts.py  test_periodic.py  test_periodic_face_shifts.py  test_periodic_remap.py  test_planar_api_dispatch.py  test_planar_diagnostics.py  test_planar_domains.py  test_planar_edge_properties.py  test_planar_edge_shifts2d.py  test_planar_fuzz_compute.py  test_planar_integration.py  test_planar_lazy_core_import.py  test_planar_normalize.py  test_power.py  test_power_periodic_pruning_regression.py  test_powerfit_active_set.py  test_powerfit_constraints.py  test_powerfit_feasibility.py  test_powerfit_fit.py  test_powerfit_problem_api.py  test_powerfit_realization.py  test_powerfit_reports.py  test_powerfit_validation_regressions.py  test_public_workflows.py  test_release_tools.py  test_separator_operator_views.py  test_separator_result_views.py  test_smoke.py  (+9 more)
tools/: README.md  _notebook_tools.py  build_wheel_from_sdist.py  build_wheels_wsl.sh  check_dist.py  check_installed_package.py  check_wheel_matrix.py  execute_notebooks.py  gen_readme.py  install_wheel_overlay.py  release_check.py
(+84 files in other folders)
